# CashFlow.ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: streamlit_app.py
src/agents/: base_agent.py  cashflow_agent.py  data_normalizer_agent.py  simple_chat.py
src/client/: client.py
src/core/: llm.py  llm_normalizer_prompt.py  settings.py  spec_apply.py
src/schema/: cashflow_direct_v1.py  models.py  normalization_spec_v1.py
src/service/: service.py
